unpackaged/main/default/objects/Centro__Grok_Embedding__c/Centro__Grok_Embedding__c.object-meta.xml
<CustomObject>
    <description>Represents internal knowledge that Ask Grok can use as source material in answers.</description>
    <label>Grok Embedding</label>
    <nameField>
        <displayFormat>GE-{0000}</displayFormat>
        <label>Embedding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grok Embeddings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>