unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__Content__c.field-meta.xml
<CustomField>
    <fullName>Centro__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>