unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__Embedding_Date__c.field-meta.xml
<CustomField>
    <fullName>Centro__Embedding_Date__c</fullName>
    <label>Embedding Date</label>
    <type>DateTime</type>
</CustomField>