unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__External_ID__c.field-meta.xml
<CustomField>
    <fullName>Centro__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>