unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Centro__Model_Name__c</fullName>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>