unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__Scrape_URL__c.field-meta.xml
<CustomField>
    <fullName>Centro__Scrape_URL__c</fullName>
    <label>Scrape URL</label>
    <type>Url</type>
</CustomField>