unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Centro__Source_URL__c</fullName>
    <inlineHelpText>Displays to user to verify answers from source material. Unique identifier within Topic Name.</inlineHelpText>
    <label>Source URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>