unpackaged/main/default/objects/Centro__Grok_Embedding__c/fields/Centro__Status__c.field-meta.xml
<CustomField>
    <fullName>Centro__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>