unpackaged/main/default/objects/Centro__Grok_Embedding__c/listViews/Centro__All.listView-meta.xml
<ListView>
    <fullName>Centro__All</fullName>
    <columns>NAME</columns>
    <columns>Centro__Embedding_Name__c</columns>
    <columns>Centro__Source_URL__c</columns>
    <columns>Centro__Topic_Name__c</columns>
    <columns>Centro__Status__c</columns>
    <columns>Centro__Embedding_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>