unpackaged/main/default/objects/Centro__Grok_Embedding__c/listViews/Centro__Mine.listView-meta.xml
<ListView>
    <fullName>Centro__Mine</fullName>
    <columns>NAME</columns>
    <columns>Centro__Embedding_Name__c</columns>
    <columns>Centro__Source_URL__c</columns>
    <columns>Centro__Topic_Name__c</columns>
    <columns>Centro__Status__c</columns>
    <columns>Centro__Embedding_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Embeddings</label>
</ListView>